2005-11-26  Tor Lillqvist  <tml@novell.com>

	* e-msg-composer-attachment.c: Include e-util-private.h to get
	redefinition of compile-time pathnames as calls to functions on
	Windows. Construct the pathnames of files and directories under
	the installation prefix at run-time to enable install-anywhere on
	Windows. No effect on functionality on Unix.

2005-10-22  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* e-msg-composer.c: (get_file_content):
	use composer->priv->charset instead of p->charset. This fixes 
	a crash

2005-10-21 Vivek Jain <jvivek@novell.com>
	
	Comitted NotZed's patch given on #314701
	
	** See bug #314701.
	* e-msg-composer-hdrs.c (get_account_store_url): don't dereference
	a null url or create an empty one.

2005-10-19  Philip Van Hoof <pvanhoof@gnome.org>

	* composer/e-msg-composer-select-file.c,
	* composer/e-msg-composer.c, composer/e-msg-composer.h,
	* composer/evolution-composer.c, composer/listener.c,
	* mail/em-composer-utils.c,
	* plugins/mailing-list-actions/mailing-list-actions.c:
	data hiding
	
2005-10-05  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	Reverting the last commit

2005-10-05  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	** See bug #315987

	* e-msg-composer-hdrs.c: (create_from_optionmenu):
	Load the account info in the From header only if the
	account is enabled

2005-10-04  Srinivasa Ragavan <sragavan@novell.com>

	** fixes bug #316937
	
	* e-msg-composer.c (handle_mailto): Shows the attachments
	when added via a mailto: url.
	
2005-09-29  Parthasarathi Susarla <sparthasarathi@novell.com>

	** See bug 317337

	* e-msg-composer.c: (e_msg_composer_new_with_message):
	Set the proper account name in account_name, so that
	the from header is set properly.
	
2005-08-22  Srinivasa Ragavan <sragavan@novell.com>

	* e-msg-composer.c (drop_action): Show the bar depending on the 
	number of attachments.
	
	* e-msg-composer-select-file.c (select_attach_response): Show the bar 